--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sendbird_sdk: ^3.1.5
+  sendbird_sdk:
+    git:
+      url: https://github.com/sendbird/sendbird-sdk-flutter
+      ref: connection
   flutter_dotenv: ^5.0.2
 
 dev_dependencies:
